# Proyecto-Semestral-DS8

./: .gitignore  ACTUALIZACIONES_TIEMPO_REAL.md  ARQUITECTURA_MQTT.md  CAMBIOS_VISION_YOLO.md  DASHBOARD_IMPLEMENTADO.md  EJECUTAR_SCRIPT_BD.md  GUIA_CONFIGURACION_BD.md  README.md  REPORTE_VERIFICACION_DETALLADA_MQTT.md  SOLUCION_PROBLEMAS_YOLO.md  VERIFICACION_MQTT_BACKEND.md  poblar_base_datos.sql  reservationsdb.sql  seed_database.sql  stak.md  test_mqtt_connection.py
.claude/: settings.local.json
RaspberryPi/: ARQUITECTURA.md  FRONTEND_INTEGRATION.md  INICIO_RAPIDO.txt  README.md  RESUMEN_EJECUTIVO.md  config.env  database_schema.sql  raspberry_listener.py  requirements.txt  restaurant_mqtt_broker.py  setup.sh  simulador_edge.py  vision_simulator.py  yolo_client.py
back-end/: .env.example  .gitignore  README.md  apply_migration.py  crear_reserva_prueba.py  create_admin.py  main.py  pyproject.toml  reservationsdb.sql  vaciar_reservas.py  verificar_reservas.py
back-end/.claude/: settings.local.json
back-end/app/: config.py  main.py
back-end/app/models/: __init__.py  mesa.py  reservacion.py  tipo_mesa.py  usuario_admin.py
back-end/app/routers/: admin.py  auth.py  mesas.py  reservaciones.py  tipos_mesa.py  vision.py
back-end/app/schemas/: __init__.py  auth.py  mesa.py  reservacion.py  tipo_mesa.py  usuario.py
back-end/app/services/: auth_service.py  mqtt_service.py  reservacion_service.py
back-end/app/utils/: dependencies.py  security.py
back-end/migrations/: 001_add_personas_actuales.sql
front-end/: README.md  README_ADMIN_DASHBOARD.md  package.json  (+2 more)
(+36 files in other folders)
