[project]
name = "back-end"
version = "0.1.0"
description = "Sistema de reservaciones de restaurante con visión artificial"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "email-validator>=2.2.0",
    "python-dotenv>=1.0.0",
    "ultralytics>=8.3.55",
    "opencv-python>=4.10.0.84"
]
